--- a/Teams.Net.Cards/Teams.Net.Cards.csproj
+++ b/Teams.Net.Cards/Teams.Net.Cards.csproj
@@ -5,12 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AdaptiveCards" Version="0.5.1" />
     <PackageReference Include="Microsoft.Bot.Builder" Version="4.2.0" />
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CommandBot.Commands\Teams.Net.Commands.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\adaptiveCard.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
