--- a/EzBotBuilder.Net.Commands/EzBotBuilder.Net.Commands.csproj
+++ b/EzBotBuilder.Net.Commands/EzBotBuilder.Net.Commands.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -12,7 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Teams.Net.Core\EzBotBuilder.Net.Core.csproj" />
+    <ProjectReference Include="..\EzBotBuilder.Net.Core\EzBotBuilder.Net.Core.csproj" />
   </ItemGroup>
-
 </Project>
