--- a/msteams.commandbot/Teams.CommandBot.csproj
+++ b/msteams.commandbot/Teams.CommandBot.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CommandBot.Commands\Teams.Net.Commands.csproj" />
-    <ProjectReference Include="..\Teams.Net.Cards\Teams.Net.Cards.csproj" />
+    <ProjectReference Include="..\EzBotBuilder.Net.Cards\EzBotBuilder.Net.Cards.csproj" />
+    <ProjectReference Include="..\EzBotBuilder.Net.Commands\EzBotBuilder.Net.Commands.csproj" />
   </ItemGroup>
 
 </Project>
