--- a/EzBotBuilder.Net.Cards/EzBotBuilder.Net.Cards.csproj
+++ b/EzBotBuilder.Net.Cards/EzBotBuilder.Net.Cards.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CommandBot.Commands\EzBotBuilder.Net.Commands.csproj" />
+    <ProjectReference Include="..\EzBotBuilder.Net.Commands\EzBotBuilder.Net.Commands.csproj" />
   </ItemGroup>
 
 </Project>
