--- a/src/EzBotBuilder.Net.Cards/EzBotBuilder.Net.Cards.csproj
+++ b/src/EzBotBuilder.Net.Cards/EzBotBuilder.Net.Cards.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <AssemblyName>EzBotBuilder.Net.Cards</AssemblyName>
     <RootNamespace>EzBotBuilder.Cards</RootNamespace>
+    <Version>2.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AdaptiveCards" Version="0.5.1" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.2.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.2.0" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.3.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
