--- a/src/EzBotBuilder.Net.Commands/EzBotBuilder.Net.Commands.csproj
+++ b/src/EzBotBuilder.Net.Commands/EzBotBuilder.Net.Commands.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>EzBotBuilder.Commands</RootNamespace>
     <AssemblyName>EzBotBuilder.Net.Commands</AssemblyName>
+    <Version>2.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.2.0" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.3.1" />
     <PackageReference Include="Microsoft.Bot.Schema.Teams" Version="4.0.0-beta1" />
   </ItemGroup>
 
