--- a/src/EzBotBuilder.Net.Core/EzBotBuilder.Net.Core.csproj
+++ b/src/EzBotBuilder.Net.Core/EzBotBuilder.Net.Core.csproj
@@ -1,8 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>EzBotBuilder</RootNamespace>
+    <Version>2.2.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
